# Computer_Graphics_Repository

./: README.md
Laboratorio 1/: drawLine.cpp  drawPoly.cpp
Laboratorio 2/: README.md  tortuga.cpp  tortugaConMovimiento.cpp
Laboratorio 3/: README.md  drawPathturtle.cpp  main
Laboratorio 4/: README.md  camera.cpp  camera.h  vector_tools.cpp  vector_tools.h
Laboratorio 4/Observacion de Escenas 3D -  Camaras/: README.md  main  main.cpp
Proyecto Escaner Laser 3D/: CMakeLists.txt  README.md  main.cpp  makefile  out  output.pcd
Proyecto Escaner Laser 3D/viewer/: CMakeLists.txt  output.pcd  viewer.cpp
Proyecto Escaner Laser 3D/vtkviewer/: CMakeLists.txt  vtkviewer.cpp
ResolucionExamen/: README.md  main  pregunta2.cpp  pregunta3.cpp  pregunta4.cpp
Unidad2/: graficador.cpp  main
